# napari-brain-peel

./: .gitignore  GUIDE.md  README.md  environment-mac.yml  environment.yml  pyproject.toml
napari_brain_peel/: __init__.py  __main__.py  _widget.py  napari.yaml
napari_skin_remover/: _background.py  _inference.py  _labeling.py  _statistics.py  _widget.py
